// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List background array 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #38C18B;
  color: #444444;
  border-top: solid 1px #cdd3e3;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #8F94A6;
  color: #444444;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #38C18B;
  color: #444444;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width:512px) {
  .c2 {
    border-top: solid 1px #cdd3e3;
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2 "
    >
      one
    </li>
    <li
      class="c3 "
    >
      two
    </li>
    <li
      class="c4 "
    >
      three
    </li>
    <li
      class="c3 "
    >
      four
    </li>
  </ul>
</div>
`;

exports[`List background string 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #38C18B;
  color: #444444;
  border-top: solid 1px #cdd3e3;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #38C18B;
  color: #444444;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width:512px) {
  .c2 {
    border-top: solid 1px #cdd3e3;
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2 "
    >
      one
    </li>
    <li
      class="c3 "
    >
      two
    </li>
  </ul>
</div>
`;

exports[`List border boolean 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2 "
    >
      one
    </li>
    <li
      class="c2 "
    >
      two
    </li>
  </ul>
</div>
`;

exports[`List border object 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 8px #38C18B;
  border-bottom: solid 8px #38C18B;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width:512px) {
  .c2 {
    border-top: solid 4px #38C18B;
    border-bottom: solid 4px #38C18B;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2 "
    >
      one
    </li>
    <li
      class="c2 "
    >
      two
    </li>
  </ul>
</div>
`;

exports[`List border side 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px #cdd3e3;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width:512px) {
  .c2 {
    border-top: solid 1px #cdd3e3;
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2 "
    >
      one
    </li>
    <li
      class="c3 "
    >
      two
    </li>
  </ul>
</div>
`;

exports[`List children render 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px #cdd3e3;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width:512px) {
  .c2 {
    border-top: solid 1px #cdd3e3;
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2 "
    >
      one - 0
    </li>
    <li
      class="c3 "
    >
      two - 1
    </li>
  </ul>
</div>
`;

exports[`List data objects 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px #cdd3e3;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width:512px) {
  .c2 {
    border-top: solid 1px #cdd3e3;
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2 "
    >
      one
    </li>
    <li
      class="c3 "
    >
      two
    </li>
  </ul>
</div>
`;

exports[`List data strings 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px #cdd3e3;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width:512px) {
  .c2 {
    border-top: solid 1px #cdd3e3;
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2 "
    >
      one
    </li>
    <li
      class="c3 "
    >
      two
    </li>
  </ul>
</div>
`;

exports[`List empty 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div
  class="c0"
>
  <ul
    class="c1"
  />
</div>
`;

exports[`List itemProps 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px #cdd3e3;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #38C18B;
  color: #444444;
  border-top: solid 2px #cdd3e3;
  border-bottom: solid 2px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding: 16px;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width:512px) {
  .c2 {
    border-top: solid 1px #cdd3e3;
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    border-top: solid 2px #cdd3e3;
    border-bottom: solid 2px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding: 16px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2 "
    >
      one
    </li>
    <li
      class="c3 "
    >
      two
    </li>
  </ul>
</div>
`;

exports[`List margin object 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px #cdd3e3;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c1 {
  list-style: none;
  padding: 0;
  margin-left: 16px;
  margin-right: 16px;
}

@media only screen and (max-width:512px) {
  .c2 {
    border-top: solid 1px #cdd3e3;
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2 "
    >
      one
    </li>
    <li
      class="c3 "
    >
      two
    </li>
  </ul>
</div>
`;

exports[`List margin string 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px #cdd3e3;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c1 {
  list-style: none;
  padding: 0;
  margin: 16px;
}

@media only screen and (max-width:512px) {
  .c2 {
    border-top: solid 1px #cdd3e3;
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2 "
    >
      one
    </li>
    <li
      class="c3 "
    >
      two
    </li>
  </ul>
</div>
`;

exports[`List onClickItem 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px #cdd3e3;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  cursor: pointer;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  cursor: pointer;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  cursor: pointer;
}

@media only screen and (max-width:512px) {
  .c2 {
    border-top: solid 1px #cdd3e3;
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
    tabindex="0"
  >
    <li
      class="c2 c3"
      tabindex="-1"
    >
      alpha
    </li>
    <li
      class="c4 c3"
      tabindex="-1"
    >
      beta
    </li>
  </ul>
</div>
`;

exports[`List onClickItem 2`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <ul
    class="List__StyledList-sc-1u79y5f-0 iiWqWM"
    tabindex="0"
  >
    <li
      class="StyledBox-sc-1etxkdl-0 eoLbjx List__StyledItem-sc-1u79y5f-1 kwtSJr"
      tabindex="-1"
    >
      alpha
    </li>
    <li
      class="StyledBox-sc-1etxkdl-0 kOELmr List__StyledItem-sc-1u79y5f-1 kwtSJr"
      tabindex="-1"
    >
      beta
    </li>
  </ul>
</div>
`;

exports[`List pad object 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px #cdd3e3;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 16px;
  padding-right: 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 16px;
  padding-right: 16px;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width:512px) {
  .c2 {
    border-top: solid 1px #cdd3e3;
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding-left: 16px;
    padding-right: 16px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2 "
    >
      one
    </li>
    <li
      class="c3 "
    >
      two
    </li>
  </ul>
</div>
`;

exports[`List pad string 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px #cdd3e3;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding: 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding: 16px;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width:512px) {
  .c2 {
    border-top: solid 1px #cdd3e3;
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding: 16px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    padding: 16px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2 "
    >
      one
    </li>
    <li
      class="c3 "
    >
      two
    </li>
  </ul>
</div>
`;

exports[`List primaryKey 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px #cdd3e3;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c3 {
  font-size: 12px;
  line-height: 16px;
  font-weight: bold;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width:512px) {
  .c2 {
    border-top: solid 1px #cdd3e3;
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2 "
    >
      <span
        class="c3"
      >
        one
      </span>
    </li>
    <li
      class="c4 "
    >
      <span
        class="c3"
      >
        two
      </span>
    </li>
  </ul>
</div>
`;

exports[`List secondaryKey 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top: solid 1px #cdd3e3;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 8px;
}

.c3 {
  font-size: 12px;
  line-height: 16px;
  font-weight: bold;
}

.c5 {
  font-size: 12px;
  line-height: 16px;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
}

@media only screen and (max-width:512px) {
  .c2 {
    border-top: solid 1px #cdd3e3;
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c6 {
    border-bottom: solid 1px #cdd3e3;
  }
}

@media only screen and (max-width:512px) {
  .c6 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width:512px) {
  .c6 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2 "
    >
      <span
        class="c3"
      >
        one
      </span>
      <div
        class="c4"
      />
      <span
        class="c5"
      >
        1
      </span>
    </li>
    <li
      class="c6 "
    >
      <span
        class="c3"
      >
        two
      </span>
      <div
        class="c4"
      />
      <span
        class="c5"
      >
        2
      </span>
    </li>
  </ul>
</div>
`;
